apps/python/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workload
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
