apps/python/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keyvault-app
  namespace: workload
spec:
  type: ClusterIP
  selector:
    app: keyvault-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
